# tfrvs

./: .gitignore  Cargo.toml  README.md  funcall.py  interface.py
data/: Parsed  file1.txt  from_logs_1000  from_logs_1500  testWtf2  е.txt
doc/: lab1.txt  lab2.txt  lab3.txt
src/: lib.rs
src/DH/: mod.rs
src/DH/FFDH/: mod.rs
src/DH/NFDH/: mod.rs
src/entries/: miniTasks.rs  mod.rs  rectangle.rs
src/gen_tasks/: helper.c
src/log_parser/: mod.rs
