[package]
name = "lab3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_python_integration"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
matrix = {version= "0.22.0" } 
anyhow = "1.0.75"
regex = "1.10.2"
libc = "0.2"